// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`if 1`] = `
"if (foo) {
  bar();
}
"
`;

exports[`if...else (1) 1`] = `
"if (foo) {
  bar();
}
else {
  baz();
}
"
`;

exports[`if...else (2) - with comment 1`] = `
"// foo is truthy
if (foo) {
  bar();
}
// foo is falsy
else {
  baz();
}
"
`;

exports[`if...elseif...else 1`] = `
"if (foo) {
  bar();
}
else if (baz) {
  qux();
}
else {
  quux();
}
"
`;
